# rust-library-template

./: README.md
.github/workflows/: build.yml
template/: .dockerignore  .envrc.example  .gitignore  CONTRIBUTING.md.liquid  Cargo.toml  Cargo.toml.liquid  Dockerfile  Makefile.toml  Makefile.toml.liquid  README.md  README.md.liquid  cargo-generate.toml  docker-compose.yml  docker-compose.yml.liquid
template/.github/workflows/: audit.yml.liquid  build.yml.liquid  cd.yml.liquid  ci.yml.liquid  deploy.yml  deploy.yml.liquid
template/src/: context.rs  lib.rs  main.rs  utils.rs
template/tests/: test_utils.rs
